--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.mjourard</groupId>
     <artifactId>env-file-maven-plugin</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.2.0</version>
     <packaging>maven-plugin</packaging>
 
     <name>Dotenv File-loading Maven Plugin</name>
